analysis/all, new analysis lib and trying to update docker