@@ -10,6 +10,11 @@ ADD supervisord.conf /etc/supervisor/conf.d/dwc.conf
 EXPOSE 8080
 EXPOSE 9001
 
+ENV CONTEXT /
+ENV PROXY /
+ENV JAVA_OPTS -server -XX:+UseConcMarkSweepGC -XX:+UseCompressedOops -XX:+DoEscapeAnalysis -Xmx4G 
+WORKDIR ["/root"]
+
 CMD ["supervisord"]
 
 ADD target/dwc-services-0.0.17-standalone.war /root/dwc-services.war
